--- a/Backend/PIMToolCodeBase/PIMToolCodeBase/PIMToolCodeBase.csproj
+++ b/Backend/PIMToolCodeBase/PIMToolCodeBase/PIMToolCodeBase.csproj
@@ -9,12 +9,13 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>PIMToolCodeBase</RootNamespace>
     <AssemblyName>PIMToolCodeBase</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -50,6 +51,9 @@
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="MathNet.Numerics, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.5.0.0\lib\net48\MathNet.Numerics.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
@@ -109,22 +113,75 @@
     <Compile Include="Configurations\AutofacConfigurations.cs" />
     <Compile Include="Configurations\MapperFactory.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="Controllers\GroupController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
+    <Compile Include="Controllers\ProjectEmployeeController.cs" />
     <Compile Include="Controllers\SampleController.cs" />
     <Compile Include="Database\PimContext.cs" />
+    <Compile Include="Domain\Entities\Employee.cs" />
+    <Compile Include="Domain\Entities\Group.cs" />
+    <Compile Include="Domain\Entities\Project.cs" />
+    <Compile Include="Domain\Entities\ProjectEmployee.cs" />
     <Compile Include="Domain\Objects\Filter.cs" />
+    <Compile Include="Dtos\EmployeeDto.cs" />
+    <Compile Include="Dtos\GroupDto.cs" />
+    <Compile Include="Dtos\ProjectDto.cs" />
+    <Compile Include="Dtos\ProjectEmployeeDto.cs" />
     <Compile Include="Dtos\SampleDto.cs" />
     <Compile Include="Domain\Entities\BaseEntity.cs" />
     <Compile Include="Domain\Entities\Sample.cs" />
     <Compile Include="Extensions\ModelBuilderExtensions.cs" />
+    <Compile Include="MappingProfiles\EmployeeMappingProfile.cs" />
+    <Compile Include="MappingProfiles\GroupMappingProfile.cs" />
+    <Compile Include="MappingProfiles\ProjectEmployeeMappingProfile.cs" />
+    <Compile Include="MappingProfiles\ProjectMappingProfile.cs" />
     <Compile Include="MappingProfiles\SampleMappingProfile.cs" />
+    <Compile Include="Migrations\202306191028334_InitialCreate.cs" />
+    <Compile Include="Migrations\202306191028334_InitialCreate.designer.cs">
+      <DependentUpon>202306191028334_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202306210334297_InitialCreate1.cs" />
+    <Compile Include="Migrations\202306210334297_InitialCreate1.designer.cs">
+      <DependentUpon>202306210334297_InitialCreate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202306210426358_ChangeEntities.cs" />
+    <Compile Include="Migrations\202306210426358_ChangeEntities.Designer.cs">
+      <DependentUpon>202306210426358_ChangeEntities.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202306210639168_ChangeEntities1.cs" />
+    <Compile Include="Migrations\202306210639168_ChangeEntities1.designer.cs">
+      <DependentUpon>202306210639168_ChangeEntities1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202306210648363_ChangeEntities2.cs" />
+    <Compile Include="Migrations\202306210648363_ChangeEntities2.designer.cs">
+      <DependentUpon>202306210648363_ChangeEntities2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IEmployeeRepository.cs" />
+    <Compile Include="Repositories\IGroupRepository.cs" />
     <Compile Include="Repositories\Imp\BaseRepository.cs" />
+    <Compile Include="Repositories\Imp\EmployeeRepository.cs" />
+    <Compile Include="Repositories\Imp\GroupRepository.cs" />
+    <Compile Include="Repositories\Imp\ProjectEmployeeRepository.cs" />
+    <Compile Include="Repositories\Imp\ProjectRepository.cs" />
     <Compile Include="Repositories\Imp\SampleRepository.cs" />
+    <Compile Include="Repositories\IProjectEmployeeRepository.cs" />
+    <Compile Include="Repositories\IProjectRepository.cs" />
     <Compile Include="Repositories\ISampleRepository.cs" />
+    <Compile Include="Services\IEmployeeService.cs" />
+    <Compile Include="Services\IGroupService.cs" />
     <Compile Include="Services\Imp\BaseService.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Services\Imp\EmployeeService.cs" />
+    <Compile Include="Services\Imp\GroupService.cs" />
+    <Compile Include="Services\Imp\ProjectEmployeeService.cs" />
+    <Compile Include="Services\Imp\ProjectService.cs" />
     <Compile Include="Services\Imp\SampleService.cs" />
+    <Compile Include="Services\IProjectEmployeeService.cs" />
+    <Compile Include="Services\IProjectService.cs" />
     <Compile Include="Services\ISampleService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -140,6 +197,23 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202306191028334_InitialCreate.resx">
+      <DependentUpon>202306191028334_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306210334297_InitialCreate1.resx">
+      <DependentUpon>202306210334297_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306210426358_ChangeEntities.resx">
+      <DependentUpon>202306210426358_ChangeEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306210639168_ChangeEntities1.resx">
+      <DependentUpon>202306210639168_ChangeEntities1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306210648363_ChangeEntities2.resx">
+      <DependentUpon>202306210648363_ChangeEntities2.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
