--- a/Backend/PIMToolCodeBase/PIMToolCodeBase/packages.config
+++ b/Backend/PIMToolCodeBase/PIMToolCodeBase/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.WebApi2" version="5.0.0" targetFramework="net461" />
   <package id="AutoMapper" version="10.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
