--- a/Backend/PIMToolCodeBase/PIMToolCodeBase/packages.config
+++ b/Backend/PIMToolCodeBase/PIMToolCodeBase/packages.config
@@ -12,7 +12,8 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Cors" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
