--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build",
+    "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "generate-swagger": "ng-swagger-gen -i http://localhost:8200/swagger/docs/v1 -o src/app/swagger"
@@ -40,7 +40,6 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "json-server": "^0.17.3",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -49,6 +48,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "^5.1.6"
+    "typescript": "~3.9.6"
   }
 }
